make-a-wish-salesforce/src/objects/VisualAntidote__Formstack_User_License__c.object
<CustomObject>
    <fields>
        <fullName>VisualAntidote__One_Primary_User__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Only one Formstack User License may have Type = Primary</description>
        <label>One Primary User</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>VisualAntidote__Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                    <default>true</default>
                    <label>Primary</label>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Guest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisualAntidote__User_Is_Unique__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>A User may only have one Formstack User License</description>
        <label>User Is Unique</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>VisualAntidote__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Formstack_User_Licenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Formstack User License</label>
    <listViews>
        <fullName>VisualAntidote__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FUL-{0000}</displayFormat>
        <label>Formstack User License	 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Formstack User Licenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>VisualAntidote__User_Required</fullName>
        <active>true</active>
        <errorConditionFormula>VisualAntidote__User__c  = NULL</errorConditionFormula>
        <errorDisplayField>VisualAntidote__User__c</errorDisplayField>
        <errorMessage>User is Required</errorMessage>
    </validationRules>
</CustomObject>